# Agentic-Commerce

./: .gitignore  README.md  pyproject.toml  requirements.txt
api/: index.py
docs/: DEAL_POLICY.md
scripts/: clear_products_sqlite.py  embed_catalog_chroma.py  generate_products_jsonl.py  load_products_sqlite.py  sqlite_products_schema.py
src/: index.py
src/agentic_commerce/: __init__.py  __main__.py  agent_prompts.py  api.py  app.py  chat_agent.py  chat_tools.py  chroma_catalog.py  cli.py  complements.py  config.py  db.py  evaluator_agent.py  routes.py  shopping_phase3_graph.py  vercel_entry.py
src/agentic_commerce/static/css/: style.css
src/agentic_commerce/templates/: assistant.html  base.html  index.html  product_detail.html  products.html
